--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
 <h1>THIS SITE IS DEVELOPING</h1>
-<p>this page is created with CLICKHTML</p>
+
+<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">광고</h5>
+
+          </div>
+          <div class="modal-body">
+              <div class="alert alert-dark" role="alert">
+CLICK HTML을 이용하면 쉽고 빠르게 웹페이지를 개발할 수 있습니다!
+</div>
+<!-- 640x480 픽셀의 이벤트 창을 넣어주세요. -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      //알림창을 띄웁니다.
+      $('#staticBackdrop').modal('show')
+    </script>
