--- a/index.html
+++ b/index.html
@@ -313,7 +313,16 @@
                             <img src="https://blogpfthumb-phinf.pstatic.net/20190222_188/blackcats4567_1550836593596S0GP4_JPEG/image.jpg?type=c120_120" alt="image">
                         </div>
                         <h4>Blackcats4567</h4>
-                        <span>Web Developer</span>
+                        <span>App Developer</span>
+                    </div>
+            
+                    <div class="single-team">
+                        <div class="team-thumb">
+                            <img src="https://cafethumb.pstatic.net/MjAxOTEyMjlfMjQx/MDAxNTc3NTUwMDA5MDM5.9hF1QCtMt9GcOxBRVKI49cSNmcsZQCZ_oygyD7krK-gg.6Y-8O8BFNvxYbSPaOt8kRM1_RhyqGQVgeQtx0aSQ14Ag.PNG/redev.png?type=c77_77" alt="image">
+                        </div>
+                        <h4>redev S</h4>
+                        <span>template developer</span>
+                        <span>Main page developer</span>
                     </div>
 
               
