--- a/index.html
+++ b/index.html
@@ -215,9 +215,16 @@
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="ach-single">
-                        <div class="icon"><i class="fa fa-book"></i></div>
+                        <div class="icon"><i class="book"></i></div>
                         <span class="counter">22</span>
                         <h5>People used former project</h5>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-12">
+                    <div class="ach-single">
+                        <div class="icon"><i class="fa fa-book"></i></div>
+                        <span class="counter">0</span>
+                        <h5>Tutorials</h5>
                     </div>
                 </div>
               
