--- a/discuss/index.html
+++ b/discuss/index.html
@@ -21,8 +21,6 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<script id="dsq-count-scr" src="//clickhtml.disqus.com/count.js" async></script>
-<a href="http://foo.com/bar.html#disqus_thread">Link</a>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">PLZ DOWNLOAD CLICK HTML</a></noscript>
 </body>
 </html>
