--- a/ideas/index.html
+++ b/ideas/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <h1>CLICK HTML IDEAS</h1>
+  <p><strong>[Rules]</strong> Don't write bad words.</p>
 <div id="disqus_thread"></div>
 <script>
 
