--- a/policy/korean.html
+++ b/policy/korean.html
@@ -1,1 +1,2 @@
-한국어
+우리는 일반 사용자 이메일을 수집하지 않습니다.  그러나 일반 사용자가 서버에 프로젝트를 게시하거나 프로젝트에 대한 의견 및 의견과 같은 활동을 수행하는 경우 일반 사용자의 이메일이 사용자를 구별하기 위해 프로젝트 서버에 업로드됩니다.
+ 평가를 구매하거나 평가 한 사용자는 평가 / 호출을 위해 계정 서버에 이메일을 업로드합니다.  누구나이 이메일을 읽을 수 있습니다.
