--- a/policy/index.html
+++ b/policy/index.html
@@ -1,2 +1,7 @@
 <p>We do not collect regular user emails. However, if a general user posts a project on the server or performs activities such as hearts and comments on the project, the email of the general user is uploaded to our project server to distinguish users.
-Users who have purchased or given a rating will have their email uploaded to their account server for rating / recall. Anyone can read these emails.</p>
+Users who have purchased or given a rating will have their email uploaded to their account server for rating / recall. Anyone can read these emails.<br><br>
+Projects that violate strange content or rules are subject to sanctions.
+The first time you break rules, the project will be Cancel posting,
+and if you continue to break rules,
+your account will be banned.
+</p>
