--- a/search.html
+++ b/search.html
@@ -3,7 +3,6 @@
 <title>Website Search</title>
 </head>
 <body>
-<script>
 <script async src="https://cse.google.com/cse.js?cx=008787197549604085526:u5u14g8wxuq"></script><div class="gcse-search"></div>
-</script>
+</body>
 </html>
