--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/img/icon/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="files/100(13).png">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -43,7 +43,7 @@
                     <div class="menu-area">
                         <div class="col-md-3 col-sm-12 col-xs-12">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/icon/logo.png" alt="Zeedapp - App Landing Template"></a>
+                                <a href="index.html"><img src="files/100(13).png" alt="Zeedapp - App Landing Template"></a>
                             </div>
                         </div>
                         <div class="col-md-9 hidden-xs hidden-sm">
@@ -84,7 +84,7 @@
                     <div class="slider-inner text-right">
                         <h2>Create Your Own Web</h2>
                         <h5>For Free!</h5>
-                        <a class="expand-video" href="#">DOWNLOAD APP</a>
+                        <a class="expand-video" href="https://play.google.com/store/apps/details?id=com.blackcat.clickhtml">DOWNLOAD APP</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
     <div class="about-area ptb--100">
         <div class="container">
             <div class="section-title">
-                <h2>Why Click HTML?</h2>
+                <h2>Why CLICK HTML?</h2>
             </div>
             <div class="row d-flex flex-center">
                 <div class="col-md-6 col-sm-6 hidden-xs">
