--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="menu-area">
                         <div class="col-md-3 col-sm-12 col-xs-12">
                             <div class="logo">
-                                <a href="index.html"><img src="files/100(13).png" alt="Zeedapp - App Landing Template"></a>
+                                <a href="index.html"><img src="assets/img/icon/logo.png" alt="Zeedapp - App Landing Template"></a>
                             </div>
                         </div>
                         <div class="col-md-9 hidden-xs hidden-sm">
