--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="slider-inner text-right">
                         <h2>Create Your Own Web</h2>
                         <h5>For Free!</h5>
-                        <a class="expand-video" href="https://play.google.com/store/apps/details?id=com.blackcat.clickhtml">DOWNLOAD APP</a>
+                        <a class="expand-video" href="download.html">DOWNLOAD APP</a>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                 <div class="col-md-3 col-sm-3 col-xs-12">
                     <div class="ach-single">
                         <div class="icon"><i class="fa fa-book"></i></div>
-                        <span class="counter">0</span>
+                        <span class="counter">2</span>
                         <h5>Tutorials</h5>
                     </div>
                 </div>
