--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="slider-inner text-right">
                         <h2>Create Your Own Web</h2>
                         <h5>For Free!</h5>
-                        <a class="expand-video" href="download.html">DOWNLOAD APP</a>
+                        <a class="expand-video" href="https://clickhtml.kro.kr/download">DOWNLOAD APP</a>
                     </div>
                 </div>
             </div>
