--- a/download.html
+++ b/download.html
@@ -4,9 +4,8 @@
 <link rel="shortcut icon" href="files/100(13).png" type="image/png">
 </head>
 <body>
-<font face=""><h1>Please wait..<br><br><br>You can create redirect page with CLICK HTML!</h1>
-<script>
-window.location.href = 'https://play.google.com/store/apps/details?id=com.blackcat.clickhtml';
-</script>
+<font face=""><h1>Click button to download</h1>
+  <a href='https://play.google.com/store/apps/details?id=com.blackcat.clickhtml&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png'/></a>
+  <p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
 </body>
 </html>
