--- a/download.html
+++ b/download.html
@@ -4,8 +4,8 @@
 <link rel="shortcut icon" href="files/100(13).png" type="image/png">
 </head>
 <body>
-<font face="white"><h1>Click button to download</h1>
+<font face="#FFFFFF"><h1>Click button to download</h1>
   <a href='https://play.google.com/store/apps/details?id=com.blackcat.clickhtml&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png'/></a>
-  <font face="white"><p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
+  <font face="#FFFFFF"><p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
 </body>
 </html>
