--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <font face="#FFFFFF"><h1>Click button to download</h1>
-  <a href='https://play.google.com/store/apps/details?id=com.blackcat.clickhtml&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png'/></a>
+  <a href='https://play.google.com/store/apps/details?id=com.blackcat.clickhtml&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' target="_blank" src='https://play.google.com/intl/en/badges/static/images/badges/en_badge_web_generic.png'/></a>
   <font face="#FFFFFF"><p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
 </body>
 </html>
