--- a/policy/index.html
+++ b/policy/index.html
@@ -1,7 +1,11 @@
-<p>We do not collect regular user emails. However, if a general user posts a project on the server or performs activities such as hearts and comments on the project, the email of the general user is uploaded to our project server to distinguish users.
-Users who have purchased or given a rating will have their email uploaded to their account server for rating / recall. Anyone can read these emails.<br><br>
-Projects that violate strange content or rules are subject to sanctions.
-The first time you break rules, the project will be Cancel posting,
-and if you continue to break rules,
-your account will be banned.
-</p>
+<p> [4/30/2020 Policy Update]
+ <br>
+ CLICK HTML does not collect end user emails.  However, if the end user posts a project to the server or performs activities such as likes and comments on the project, the end user's email is uploaded to the project server to distinguish the user.  Users rated or purchased upload emails to the account server to identify users.  Anyone can read this email.
+ <br>
+ Projects that violate strange content or rules are subject to sanctions.  If you break the first rule, your project will be unposted, and if you continue to break the rule, your account will be suspended.
+ <br>
+ Decompiling and modifying CLICK HTML is prohibited.
+ In addition, copying of the functions of CLICK HTML is prohibited.
+ <br>
+ These terms and conditions apply when you log in to social.  These terms and conditions can be edited at any time in CLICK HTML, and the changed terms are notified for 5 days with the news function in the app so that users can view them while using CLICK HTML.
+ </p>
