--- a/policy/index.html
+++ b/policy/index.html
@@ -7,5 +7,5 @@
  Decompiling and modifying CLICK HTML is prohibited.
  In addition, copying of the functions of CLICK HTML is prohibited.
  <br>
- These terms and conditions apply when you log in to social.  These terms and conditions can be edited at any time in CLICK HTML, and the changed terms are notified for 5 days with the news function in the app so that users can view them while using CLICK HTML.
+ These terms and conditions apply when you use CLICK HTML.  These terms and conditions can be edited at any time in CLICK HTML, and the changed terms are notified for 5 days with the news function in the app so that users can view them while using CLICK HTML.
  </p>
