--- a/policy/korean.html
+++ b/policy/korean.html
@@ -1,11 +1,11 @@
 <p>[4/30/2020 Policy Update]
 <br>
-CLICK HTML은 일반 사용자 이메일을 수집하지 않습니다. 그러나 일반 사용자가 서버에 프로젝트를 게시하거나 프로젝트에 대한 좋아요 및 댓글과 같은 활동을 수행하는 경우 일반 사용자의 이메일이 사용자를 구별하기 위해 프로젝트 서버에 업로드됩니다. 등급을 부여 또 는 구매한 사용자는 사용자 구분을 위해 계정 서버에 이메일을 업로드합니다. 누구나 이 이메일을 읽을 수 있습니다.
+CLICK HTML은 일반 사용자 이메일을 수집하지 않습니다. 그러나 일반 사용자가 서버에 프로젝트를 게시하거나 프로젝트에 대한 좋아요 및 댓글과 같은 활동을 수행하는 경우 일반 사용자의 이메일이 사용자를 구별하기 위해 프로젝트 서버에 업로드됩니다. 등급을 부여받음 또는 구매한 사용자는 사용자 구분을 위해 계정 서버에 이메일을 업로드합니다. 누구나 이 이메일을 읽을 수 있습니다.
 <br>
 이상한 내용이나 규칙을 위반하는 프로젝트는 제재를 받습니다. 처음 규칙을 어기면 프로젝트가 게시취소 되고, 계속 규칙을 어기면 귀하의 계정이 정지됩니다.
 <br>
 CLICK HTML을 디컴파일, 수정은 금지됩니다.
 또한 CLICK HTML의 기능 배끼기는 금지됩니다.
 <br>
-이 이용약관은 소셜 로그인을 하면 적용되는 내용입니다. 이 이용약관은 CLICK HTML에서 언제나 수정 가능하며, 변경된 약관은 사용자가 CLICK HTML 사용 중에 볼 수 있도록 앱 내 뉴스기능으로 5일동안 공지합니다.
+이 이용약관은 앱을 사용하면 적용되는 내용입니다. 이 이용약관은 CLICK HTML에서 언제나 수정 가능하며, 변경된 약관은 사용자가 CLICK HTML 사용 중에 볼 수 있도록 앱 내 뉴스기능으로 5일동안 공지합니다.
 </p>
